refactor: now using real ebics upload! remove EBICS_DOWNLOAD scenario and related code; update documentation and tests