@@ -22,11 +22,13 @@ Besteht aus:
 
 ```bash
 ./mvnw clean package -DskipTests          # JAR bauen
-docker build -t tfl4-ek-bench:jvm .       # Docker-Image bauen
-./mvnw test                                # 104 Unit Tests
+docker build -t tfl4-ek-bench:jvm .       # Docker-Image bauen (Standard)
+docker build -t tfl4-ek-bench:jvm-ek -f Dockerfile.with-ek .  # Docker-Image mit EBICS
+./mvnw test                                # 166 Unit Tests
 ./mvnw test -DincludeDocker                # 4 Docker-E2E-Tests
 ./mvnw exec:java                           # Benchmark interaktiv starten
 ./mvnw exec:java -Dexec.args="--scenario json --n 200000"  # nicht-interaktiv
+./mvnw exec:java -Dexec.args="--scenario json --jvmArgs \"-XX:+UseZGC\""  # einzelner Run mit ZGC
 ```
 
 ---
@@ -38,20 +40,20 @@ TFL4/
 ├── pom.xml                          # Build-Konfiguration (Spring Boot 4.0.0, Java 17)
 ├── mvnw / mvnw.cmd                  # Maven Wrapper
 ├── Dockerfile                       # Temurin JRE 25, ohne EK
-├── Dockerfile.with-ek               # Temurin JRE 21, mit EK-JARs + EBICS-Keys
+├── Dockerfile.with-ek               # Temurin JRE 25, mit EK-JARs + EBICS-Keys
 ├── Dockerfile.windows               # Windows Server Core, Oracle JDK 21
 │
 ├── src/main/java/de/mattis/
 │   ├── jvmoptimdemo/
 │   │   ├── ResourcenOptimierungTfl4Application.java
 │   │   ├── DemoController.java      # /json, /alloc
-│   │   └── EkController.java        # /ebics/upload, /ebics/download, /ebics/health, /ebics/stats
+│   │   └── EkController.java        # /ebics/upload, /ebics/health, /ebics/stats
 │   │
 │   └── resourcenoptimierung/bench/
 │       ├── BenchCli.java            # CLI-Einstiegspunkt
 │       ├── BenchmarkPlan.java       # Definiert zu testende Konfigurationen
 │       ├── BenchmarkConfig.java     # Name + Docker-Image + JVM-Flags
-│       ├── BenchmarkScenario.java   # Enum: JSON, ALLOC, EBICS_UPLOAD, EBICS_DOWNLOAD
+│       ├── BenchmarkScenario.java   # Enum: JSON, ALLOC, EBICS_UPLOAD
 │       ├── BenchmarkRunner.java     # Iteriert über Plan, delegiert an SingleRun
 │       ├── SingleRun.java           # Führt einen Run aus (Container-Lifecycle + Messung)
 │       ├── MeasurementProfile.java  # Warmup/Messung/Concurrency/Sleep
@@ -60,21 +62,25 @@ TFL4/
 │       ├── RunResult.java           # Record mit allen Messwerten eines Runs
 │       ├── DockerStatSample.java    # Einzelner docker-stats-Snapshot
 │       ├── ConsoleSummaryPrinter.java
-│       └── ResultExporters.java     # CSV + JSON Export
+│       ├── ResultExporters.java     # CSV + JSON Export
+│       ├── ExcelExporter.java       # Excel-Export (.xlsx) mit Charts + CSV-Merge
+│       └── TravicLinkManager.java  # docker-compose Lifecycle für TravicLink (EBICS)
 │
 ├── src/test/java/de/mattis/
 │   ├── jvmoptimdemo/
 │   │   ├── DemoControllerTest.java       # 7 MockMvc-Tests
 │   │   └── EkControllerTest.java         # 12 Tests (MockMvc + maskSensitive)
 │   └── resourcenoptimierung/bench/
-│       ├── BenchCliTest.java             # 26 Tests
+│       ├── BenchCliTest.java             # 48 Tests
 │       ├── BenchmarkConfigTest.java      # 8 Tests
-│       ├── BenchmarkPlanTest.java        # 7 Tests
+│       ├── BenchmarkPlanTest.java        # 20 Tests
 │       ├── MeasurementProfileTest.java   # 11 Tests
 │       ├── DockerStatSampleTest.java     # 8 Tests
 │       ├── RunResultTest.java            # 3 Tests
 │       ├── ConsoleSummaryPrinterTest.java# 11 Tests
 │       ├── ResultExportersTest.java      # 11 Tests
+│       ├── ExcelExporterTest.java        # 22 Tests
+│       ├── TravicLinkManagerTest.java    # 5 Tests
 │       └── DockerEndToEndTest.java       # 4 Docker-E2E-Tests (@Tag("docker"))
 │
 ├── lib/                             # EK-JARs (system scope, ~30 JARs + 2 DLLs)
@@ -100,9 +106,8 @@ TFL4/
 | Endpunkt               | Verhalten                                                        |
 |------------------------|------------------------------------------------------------------|
 | `GET /ebics/upload?n=` | Führt `n` EBICS-Uploads durch (REAL oder SIMULATION)             |
-| `GET /ebics/download?n=`| Führt `n` EBICS-Downloads durch (REAL oder SIMULATION)          |
 | `GET /ebics/health`    | Status: mode, ekAvailable, ekInitialized, initError, requestCount|
-| `GET /ebics/stats`     | Zähler: totalRequests, totalUploads, totalDownloads              |
+| `GET /ebics/stats`     | Zähler: totalRequests, totalUploads                              |
 
 ### Actuator
 
@@ -148,7 +153,7 @@ Bei Fehlern werden ausführliche Diagnostics geloggt (Config-Werte mit maskierte
 
 ### Ablauf
 
-`BenchCli.main()` → `BenchmarkPlan.defaultPlan()` → `BenchmarkRunner.runAll()` → je `SingleRun.execute()`:
+`BenchCli.main()` → `resolvePlan()` (Default-Plan oder `--jvmArgs`) → `BenchmarkRunner.runAll()` → je `SingleRun.execute()`:
 
 ```
 1. docker run -d -p 8080:8080 --cpus 1 --memory 768m [-e JAVA_TOOL_OPTIONS=...] <image>
@@ -180,16 +185,33 @@ Polling alle 150ms. Bei 401/403/404 sofort nächster Fallback. Timeout: 120s.
 | `json`           | `PAYLOAD_HEAVY_JSON`  | `/json?n=`          | 200.000     |
 | `alloc`          | `ALLOC_HEAVY_OK`      | `/alloc?n=`         | 10.000.000  |
 | `ebics-upload`   | `EBICS_UPLOAD`        | `/ebics/upload?n=`  | 10          |
-| `ebics-download` | `EBICS_DOWNLOAD`      | `/ebics/download?n=`| 10          |
 
-Auch akzeptiert: `payload`, `payload-heavy-json`, `/json`, `ok`, `upload`, `download`, etc.
+Auch akzeptiert: `payload`, `payload-heavy-json`, `/json`, `ok`, `upload`, `ebics`, etc.
 
-### Standard-Plan
+### Standard-Plan (10 Konfigurationen)
 
+Systematischer Vergleich von GC-Strategien, G1-Tuning und JVM-Interna auf Temurin JRE 25:
+
+**Garbage-Collector-Vergleich:**
 ```java
-BenchmarkConfig("baseline",  "tfl4-ek-bench:jvm", List.of())
-BenchmarkConfig("coops-off", "tfl4-ek-bench:jvm", List.of("-XX:-UseCompressedOops"))
-// deaktiviert: coh-on (braucht JDK 24+), native (kein Image gebaut)
+BenchmarkConfig("baseline",    "tfl4-ek-bench:jvm", List.of())                          // G1GC (Default)
+BenchmarkConfig("zgc",         "tfl4-ek-bench:jvm", List.of("-XX:+UseZGC"))              // ZGC (generational, Sub-ms-Pausen)
+BenchmarkConfig("shenandoah",  "tfl4-ek-bench:jvm", List.of("-XX:+UseShenandoahGC"))     // Shenandoah (pausenarm)
+BenchmarkConfig("parallel-gc", "tfl4-ek-bench:jvm", List.of("-XX:+UseParallelGC"))       // Throughput-optimiert
+BenchmarkConfig("serial-gc",   "tfl4-ek-bench:jvm", List.of("-XX:+UseSerialGC"))         // Single-Thread, minimaler Overhead
+```
+
+**G1GC-Tuning:**
+```java
+BenchmarkConfig("g1-low-pause", "tfl4-ek-bench:jvm", List.of("-XX:+UseG1GC", "-XX:MaxGCPauseMillis=50"))
+BenchmarkConfig("g1-heap-256m", "tfl4-ek-bench:jvm", List.of("-Xmx256m"))               // eingeschränkter Heap
+BenchmarkConfig("g1-heap-512m", "tfl4-ek-bench:jvm", List.of("-Xmx512m"))               // mittlerer Heap
+```
+
+**JVM-Interna:**
+```java
+BenchmarkConfig("coops-off", "tfl4-ek-bench:jvm", List.of("-XX:-UseCompressedOops"))     // 64-Bit-Referenzen
+BenchmarkConfig("coh-on",    "tfl4-ek-bench:jvm", List.of("-XX:+UnlockExperimentalVMOptions", "-XX:+UseCompactObjectHeaders"))
 ```
 
 JVM-Flags werden über `JAVA_TOOL_OPTIONS` an den Container übergeben. Bei Native-Images wird `JAVA_TOOL_OPTIONS` nicht gesetzt.
@@ -198,20 +220,52 @@ JVM-Flags werden über `JAVA_TOOL_OPTIONS` an den Container übergeben. Bei Nati
 
 | Argument                    | Default              | Beschreibung                          |
 |-----------------------------|----------------------|---------------------------------------|
-| `--scenario`                | interaktiv           | json / alloc / ebics-upload / ebics-download |
+| `--scenario`                | interaktiv           | json / alloc / ebics-upload            |
 | `--n`                       | szenarioabhängig     | Workload-Größe                        |
 | `--warmupRequests`          | 20                   | Aufwärm-Requests                      |
 | `--measureRequests`         | 100                  | Mess-Requests                         |
 | `--concurrency`             | 1                    | Parallele Requests                    |
 | `--sleepBetweenRequestsMs`  | 0                    | Pause zwischen Requests (ms)          |
+| `--jvmArgs`                 | —                    | JVM-Flags für einen einzelnen Run (überschreibt Default-Plan) |
+| `--configName`              | `cli-custom`         | Name der Konfiguration (nur mit `--jvmArgs`) |
+| `--dockerImage`             | `tfl4-ek-bench:jvm`  | Docker-Image (nur mit `--jvmArgs`)    |
+| `--merge-excel`             | —                    | Standalone: alle CSVs aus bench-results/ zu benchmark-vergleich.xlsx zusammenführen |
 
 Beide Formen: `--scenario json` und `--scenario=json`.
+
+### Beispiele
+
+```bash
+# Default-Plan (10 Konfigurationen: GC-Vergleich + G1-Tuning + JVM-Interna):
+./mvnw exec:java -Dexec.args="--scenario json --n 200000"
+
+# Einzelner Run mit ZGC:
+./mvnw exec:java -Dexec.args="--scenario json --jvmArgs \"-XX:+UseZGC -Xmx1g\" --configName zgc-test"
+
+# Einzelner Run ohne zusätzliche Flags (Baseline):
+./mvnw exec:java -Dexec.args="--scenario alloc --jvmArgs \"\""
+
+# Eigenes Docker-Image:
+./mvnw exec:java -Dexec.args="--scenario json --jvmArgs \"-Xmx2g\" --dockerImage myapp:latest"
+
+# Nur CSV-Merge (kein Benchmark-Durchlauf):
+./mvnw exec:java -Dexec.args="--merge-excel"
+```
+
+Wenn `--jvmArgs` gesetzt ist, wird **nur eine** Konfiguration mit den angegebenen Flags ausgeführt (statt des Default-Plans mit mehreren Konfigurationen).
 
 ### Ergebnis-Export
 
 - **Konsole**: Gruppiert nach Szenario, Readiness/First/Latenz-Perzentile/Throughput als Übersicht, dann pro Run sortiert nach p95 (langsamste zuerst) mit Docker-Stats (IDLE/LOAD/POST)
 - **CSV** (`bench-results/results-<timestamp>.csv`): Eine Zeile pro Run, alle Kennzahlen + Messprofil
 - **JSON** (`bench-results/results-<timestamp>.json`): Wie CSV, zusätzlich rohe Latenz-Arrays und Messprofil als verschachteltes Objekt
+- **Excel** (`bench-results/results-<timestamp>.xlsx`): 5-Sheet-Workbook mit Balkendiagrammen:
+  - Übersicht -- alle Kennzahlen tabellarisch, AutoFilter, Section-Headers, Zebra-Striping
+  - Latenzen -- p50/p95/p99-Vergleich als gruppiertes Balkendiagramm
+  - Startup & Throughput -- Readiness- und Durchsatz-Diagramme
+  - Ressourcen -- Docker CPU%/Mem% (IDLE/LOAD/POST) als Diagramm
+  - Rohdaten -- Einzellatenzen für eigene Auswertungen
+- **Vergleichs-Excel** (`bench-results/benchmark-vergleich.xlsx`): Wird nach jedem Run automatisch neu generiert. Fasst alle CSV-Dateien aus bench-results/ zusammen (4 Sheets: Übersicht alle Runs, Latenzen alle Runs, Startup alle Runs, Hinweis Ressourcen). Auch standalone via `--merge-excel` erzeugbar.
 
 ---
 
@@ -235,7 +289,7 @@ Beide Formen: `--scenario json` und `--scenario=json`.
 ### Ausführen
 
 ```bash
-./mvnw test                  # 104 Unit Tests (kein Docker nötig)
+./mvnw test                  # 166 Unit Tests (kein Docker nötig)
 ./mvnw test -DincludeDocker  # 4 Docker-E2E-Tests (braucht Docker + gebautes Image)
 ```
 
@@ -247,14 +301,16 @@ Docker-E2E-Tests sind mit `@Tag("docker")` markiert. Standardmäßig schließt S
 
 | Klasse                   | Tests | Schwerpunkt                                    |
 |--------------------------|-------|------------------------------------------------|
-| BenchCliTest             | 26    | Argument-Parsing, Szenario-Auflösung, Defaults |
+| BenchCliTest             | 48    | Argument-Parsing, Szenario-Auflösung, Defaults, --jvmArgs, hasFlag, EBICS-Image-Auswahl |
 | MeasurementProfileTest   | 11    | Validierung, Defaults, ungültige Werte         |
 | BenchmarkConfigTest      | 8     | isNative()-Erkennung, Record-Felder            |
-| BenchmarkPlanTest        | 7     | defaultPlan()-Struktur                         |
+| BenchmarkPlanTest        | 20    | defaultPlan()-Struktur, alle 10 Konfigurationen, withDockerImage()|
 | DockerStatSampleTest     | 8     | Parsing realer docker-stats-Ausgaben           |
 | RunResultTest            | 3     | Record-Zugriff                                 |
 | ConsoleSummaryPrinterTest| 11    | Ausgabe-Formatierung, Sortierung               |
 | ResultExportersTest      | 11    | CSV/JSON-Korrektheit, Sonderfälle              |
+| ExcelExporterTest        | 22    | writeExcel (5 Sheets, Charts), mergeFromCsvDirectory, parseCsv, extractTimestamp |
+| TravicLinkManagerTest    | 5     | isEbicsScenario(), Konstruktion                |
 | DemoControllerTest       | 7     | /json + /alloc via MockMvc                     |
 | EkControllerTest         | 12    | /ebics/* via MockMvc + maskSensitive()         |
 | DockerEndToEndTest       | 4     | Volle SingleRun-Durchläufe mit echten Containern|
@@ -273,7 +329,7 @@ Docker-E2E-Tests sind mit `@Tag("docker")` markiert. Standardmäßig schließt S
 | Datei                | Base Image                      | JRE  | EK-JARs | Einsatz |
 |----------------------|---------------------------------|------|---------|---------|
 | `Dockerfile`         | `eclipse-temurin:25-jre`        | 25   | Nein    | JSON/Alloc-Benchmarks |
-| `Dockerfile.with-ek` | `eclipse-temurin:21-jre`        | 21   | Ja      | EBICS-Benchmarks (REAL) |
+| `Dockerfile.with-ek` | `eclipse-temurin:25-jre`        | 25   | Ja      | EBICS-Benchmarks (REAL) |
 | `Dockerfile.windows` | `mcr.microsoft.com/windows/servercore:ltsc2022` | 21 | Ja | Windows-Container |
 
 ---
@@ -298,6 +354,10 @@ docker compose -f bench-docker/docker-compose.yml up -d
 
 Startet PostgreSQL 16 + TravicLink auf Port 7070. Der TravicLink-Server ist proprietär (PPI AG).
 
+Bei EBICS-Szenarien (`--scenario ebics-upload`) startet die Benchmark-CLI den TravicLink-Stack **automatisch** per `TravicLinkManager` und stoppt ihn nach Abschluss aller Runs. Manuelles `docker compose up` ist nur für Debugging nötig.
+
+Innerhalb der Benchmark-Container wird `--add-host nbag0342:host-gateway` gesetzt, damit die EBICS-URL `https://nbag0342:7070/` auf den Host (= TravicLink) auflöst. Das Docker-Image wird automatisch auf `tfl4-ek-bench:jvm-ek` umgestellt.
+
 ### EK-JARs einrichten
 
 ```bash
@@ -310,7 +370,8 @@ Startet PostgreSQL 16 + TravicLink auf Port 7070. Der TravicLink-Server ist prop
 
 ```bash
 ./mvnw clean package -DskipTests   # ~54 MB Fat JAR
-docker build -t tfl4-ek-bench:jvm . # Docker-Image
+docker build -t tfl4-ek-bench:jvm .            # Standard-Image (JSON/Alloc)
+docker build -t tfl4-ek-bench:jvm-ek -f Dockerfile.with-ek .  # EK-Image (EBICS, mit Keys + Config)
 ```
 
 Der `spring-boot-maven-plugin` bindet System-Scope-JARs ein (`includeSystemScope=true`) und schließt die log4j/slf4j-JARs des EK aus (Konflikt mit Spring Boot Logging). Surefire macht dasselbe für den Test-Classpath (`classpathDependencyExcludes`).
@@ -344,10 +405,10 @@ Der `spring-boot-maven-plugin` bindet System-Scope-JARs ein (`includeSystemScope
 | | |
 |---|---|
 | Spring Boot | 4.0.0 |
-| Java | 17 (Compile), 21/25 (Container-Runtime) |
+| Java | 17 (Compile), 25 (Container-Runtime) |
 | Build | Maven via Wrapper |
-| Docker Base | Eclipse Temurin JRE 25 / 21 |
+| Docker Base | Eclipse Temurin JRE 25 |
 | EBICS Kernel | Travic EK 4.0.9 (PPI AG), optional |
-| Tests | JUnit 5, Spring Boot WebMvc Test, 104 Unit + 4 E2E |
+| Tests | JUnit 5, Spring Boot WebMvc Test, 166 Unit + 4 E2E |
 | Container Limits | 1 CPU, 768 MB RAM |
 | Fat JAR | ~54 MB |
